Fieldset alignment fix

--- a/src/sass/components/forms/_settings-form.scss
+++ b/src/sass/components/forms/_settings-form.scss
@@ -23,8 +23,6 @@
 		border: none;
 
 		@include mixins.media-query(medium) {
-			align-items: flex-start;
-
 			&--horizontal {
 				flex-direction: row;
 				justify-content: space-between;
